@@ -1,0 +1,20 @@
+denki|electricity
+tsugi|next
+mado|window
+tanjoubi|birthday
+totemo|very
+heya|room
+umi|sea
+samui|cold
+ookii|big
+hurui|old
+sukina|to like
+inu|dog
+neko|cat
+au|to meet
+ie|house
+ginkou|bank
+eiga|movie
+hidari|left
+migi|right
+kaku|to write
